# Chip-8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: chip8.h
src/: chip8.cpp  main.cpp
test/: chip8.cpp
